# YouTube-Success-Prediction-ML

./: .dockerignore  .dvcignore  .gitignore  .jekyllignore  .nojekyll  .prettierignore  API_REFERENCE.md  ARCHITECTURE.md  CITATION.cff  DEPLOYMENT.md  FRONTEND.md  Jenkinsfile  MLOPS.md  Makefile  README.md  RUN_20260319_ONE_BY_ONE_2.txt  RUN_20260319_ONE_BY_ONE_3.txt  RUN_20260319_ONE_BY_ONE_4.txt  RUN_20260320_ONE_BY_ONE_5.txt  RUN_20260321_ONE_BY_ONE_6.txt  RUN_20260322_SUBSET_B16_YouTube-Success-Prediction-ML.txt  RUN_20260322_SUBSET_B17_YouTube-Success-Prediction-ML.txt  RUN_20260323_FULL_B19_YouTube-Success-Prediction-ML.txt  RUN_20260323_FULL_B20_YouTube-Success-Prediction-ML.txt  RUN_20260323_SUBSET_B18_YouTube-Success-Prediction-ML.txt  RUN_20260325_FULL_B21_YouTube-Success-Prediction-ML.txt  RUN_20260325_SUBSET_B22_2256Z_YouTube-Success-Prediction-ML.txt  RUN_20260326_SUBSET_B23_2310Z_YouTube-Success-Prediction-ML.txt  RUN_20260328_SUBSET_B26_YouTube-Success-Prediction-ML.txt  RUN_20260331_FULL_B28_YouTube-Success-Prediction-ML.txt  RUN_20260401_FULL_B30_YouTube-Success-Prediction-ML.txt  SOLID_REFACTOR_NOTE.md  codex-solid-refactor-20260313-rerun-2.txt  codex-solid-refactor-20260313083840-part2.txt  codex-solid-refactor-20260314-rerun-3.txt  codex-solid-refactor-20260315-rerun-4.txt  codex-solid-refactor-20260316-rerun-6.txt  codex-solid-refactor-20260317-rerun-8.txt  docker-compose.monitoring.yml  docker-compose.yml  (+12 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: CONTRIBUTING.md  SECURITY.md
analysis/: README.md
api/: main.py
(+208 files in other folders)
